--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+export DH_COMPAT=4
+
 build: build-stamp
 build-stamp:
 	dh_testdir
@@ -20,8 +22,8 @@ install-stamp: build-stamp
 	dh_testroot
 	dh_clean -k
 	dh_installdirs
-	install -o root -g root -m 0755 vrms `pwd`/debian/tmp/usr/bin/vrms
-	install -o root -g root -m 0644 reasons/vrms `pwd`/debian/tmp/usr/share/vrms/reasons/vrms
+	install -o root -g root -m 0755 vrms `pwd`/debian/vrms/usr/bin/vrms
+	install -o root -g root -m 0644 reasons/vrms `pwd`/debian/vrms/usr/share/vrms/reasons/vrms
 	touch install-stamp
 
 binary-indep: build install
@@ -30,13 +32,11 @@ binary-arch: build install
 	dh_testdir
 	dh_testroot
 	dh_installdocs
-	dh_installexamples
 	dh_installmenu
 	dh_installcron
 	dh_installman vrms.1
 	dh_installchangelogs 
 	dh_link
-	dh_strip
 	dh_compress
 	dh_fixperms
 	dh_installdeb
