--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,7 @@ binary-arch: build install
 	dh_testroot
 	dh_installdocs
 	dh_installmenu
+	dh_installdebconf
 	dh_installcron
 	dh_installman vrms.1
 	dh_installchangelogs 
