--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 7)
 Vcs-SVN: svn://svn.debian.org/vrms/
 Homepage: http://vrms.alioth.debian.org/
 Uploaders: Bdale Garbee <bdale@gag.com>, Rogério Brito <rbrito@ime.usp.br>
+DM-Upload-Allowed: yes
 
 Package: vrms
 Architecture: all
