--- a/debian/control
+++ b/debian/control
@@ -1,20 +1,20 @@
-Source: vrms
+Source: vbg
 Section: admin
 Priority: optional
-Maintainer: Debian vrms Maintainers <vrms-devel@lists.alioth.debian.org>
+Maintainer: Debian vbg Maintainers <vbg-devel@lists.alioth.debian.org>
 Standards-Version: 3.9.2
 Build-Depends: debhelper (>= 8)
-Vcs-Git: git://anonscm.debian.org/vrms/vrms.git
+Vcs-Git: git://anonscm.debian.org/vbg/vbg.git
 Vcs-Browser: http://alioth.debian.org/scm/browser.php?group_id=30771
-Homepage: http://vrms.alioth.debian.org/
+Homepage: http://vbg.alioth.debian.org/
 Uploaders: Bdale Garbee <bdale@gag.com>, Rogério Brito <rbrito@ime.usp.br>
 DM-Upload-Allowed: yes
 
-Package: vrms
+Package: vbg
 Architecture: all
 Depends: ${misc:Depends}
 Description: virtual Richard M. Stallman
- The vrms program will analyze the set of currently-installed packages
+ The vbg program will analyze the set of currently-installed packages
  on a Debian-based system, and report all of the packages from the
  non-free and contrib trees which are currently installed.
  .
@@ -22,11 +22,11 @@ Description: virtual Richard M. Stallman
  have diverged since this program was originally written.  In such cases, this
  program follows the Debian Free Software Guidelines.
  .
- Note that vrms is not limited to Debian systems only (which means that
+ Note that vbg is not limited to Debian systems only (which means that
  it also works with Debian-derived distributions such as Ubuntu). It is
  also not limited to Linux-based systems.
  .
- Future versions of vrms may include an option to also display text
+ Future versions of vbg may include an option to also display text
  from the public writings of RMS and others that explain why use of each
  of the installed non-free packages might cause moral issues for some in
  the Free Software community.  This functionality is not yet included.
